--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -101,10 +101,6 @@
           <p>(Road Opp. to Chennai Silks,</p>
           <p>Behind Mahindra Showroom)</p>
         </address>
-        <ul class="footer-social-links">
-          <li><a href="https://www.linkedin.com/company/uxmint-consulting/" target="_blank"><fa-icon [icon]="['fab','linkedin']" size="2x"></fa-icon></a></li>
-          <li><a href="https://medium.com/uxmint" target="_blank"><fa-icon [icon]="['fab','medium']" size="2x"></fa-icon></a></li>
-        </ul>
       </div>
       <div class="col-md-8">
         <div class="row">
@@ -142,6 +138,12 @@
         </div>
       </div>
     </div>
+    <div class="row">
+    <ul class="footer-social-links">
+      <li><a href="https://www.linkedin.com/company/uxmint-consulting/" target="_blank"><fa-icon [icon]="['fab','linkedin']" size="2x"></fa-icon></a></li>
+      <li><a href="https://medium.com/uxmint" target="_blank"><fa-icon [icon]="['fab','medium']" size="2x"></fa-icon></a></li>
+    </ul>
+  </div>
     <div class="row">
         <div class="col-md-12">
           <div class="text-center">
