--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -155,8 +155,7 @@ footer{
     .footer-social-links{
         list-style: none;
         padding: 0;
-        padding-top: 30px;
-        padding-left: 30px;
+        padding-left: 40px;
         li{
             padding-right: 35px;
             display: inline-block;
@@ -281,8 +280,9 @@ footer{
             }
         }
         .footer-social-links{
-            padding-top: 40px;
-            padding-left: 0px;
+            padding-top: 0px;
+            padding-left: 10px;
+            padding-bottom: 10px;
         }
         .desktop-only{
             font-size: 13px;
