--- a/src/app/components/enquiry-footer/enquiry-footer.component.html
+++ b/src/app/components/enquiry-footer/enquiry-footer.component.html
@@ -2,6 +2,7 @@
   <div class="container">
     <div class="enquiry">
     <div class="row">
+      <div class="col-sm-1"></div>
       <div class="col-sm-8">
         <div class="row">
         <h5>Lets connect and build a </h5><h2>better Product </h2>
@@ -19,6 +20,7 @@
       <div class="col-sm-2">
           <a class="btn btn-primary enquire" routerLink="/contact-us">Enquire</a>
       </div>
+      <div class="col-sm-1"></div>
     </div>
   </div>
 </div>
