--- a/src/app/components/projects/event-management/event-management.component.html
+++ b/src/app/components/projects/event-management/event-management.component.html
@@ -149,13 +149,13 @@
       <div class="row research2">
         <div class="col-md-4">
           <h5>User Research</h5>
-          <p>We have interviewed 100+ Persons</p>
+          <p>We have interviewed 100+ users</p>
           <div class="step-image1">
             <img src="/assets/images/projects/event-management/em4.png" alt="Event Management"/>
         </div>
-        <div class="set"><img src="/assets/images/projects/event-management/Ellipse 560.png"/><span class="profile"><img src="/assets/images/projects/event-management/em5.png"/></span><span class="highlights">22</span><span class="highlights1">Vendors</span></div><hr>
-        <div class="set"><img src="/assets/images/projects/event-management/Ellipse 561.png"/><span class="profile"><img src="/assets/images/projects/event-management/em6.png"/></span><span class="highlights">24</span><span class="highlights1">Venue  Managers</span></div><hr>
-        <div class="set"><img src="/assets/images/projects/event-management/Ellipse 562.png"/><span class="profile"><img src="/assets/images/projects/event-management/em7.png"/></span><span class="highlights">21</span><span class="highlights1">Users</span></div>
+        <div class="set"><img src="/assets/images/projects/event-management/Ellipse 560.png"/><span class="profile"><img src="/assets/images/projects/event-management/em5.png"/></span><span class="highlights">25</span><span class="highlights1">Vendors</span></div><hr>
+        <div class="set"><img src="/assets/images/projects/event-management/Ellipse 561.png"/><span class="profile"><img src="/assets/images/projects/event-management/em6.png"/></span><span class="highlights">25</span><span class="highlights1">Venue  Managers</span></div><hr>
+        <div class="set"><img src="/assets/images/projects/event-management/Ellipse 562.png"/><span class="profile"><img src="/assets/images/projects/event-management/em7.png"/></span><span class="highlights">50</span><span class="highlights1">Users</span></div>
       <p>With categaorized into 4 Personas</p> 
       </div>
         <div class="col-md-8">
