--- a/src/app/components/projects/health/health.component.html
+++ b/src/app/components/projects/health/health.component.html
@@ -222,31 +222,31 @@
       <div class="other-works-body">
           <div class="row space">
             <div class="col-md-4">
-              <div class="step-image" routerLink="/projects/social-review">
-                  <img src="/assets/images/projects/project4.png" alt="Case Study"/>
-                  <div class="text-hover">
-                      <h4>Social Marketing</h4>
-                      <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-4">
-            <div class="step-image" routerLink="/projects/skill-development">
-                <img src="/assets/images/projects/project3.png" alt="Case Study"/>
+              <div class="step-image" routerLink="/projects/construction">
+                <img src="/assets/images/projects/project6.png" alt="Case Study"/>
                 <div class="text-hover">
-                    <h4>Skill Development</h4>
-                    <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
+                    <h4>Construction Portal</h4>
+                    <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
                 </div>
             </div>
-        </div>
-        <div class="col-md-4">
-          <div class="step-image" routerLink="/projects/event-management">
-              <img src="/assets/images/projects/project1.png" alt="Case Study"/>
+          </div>
+          <div class="col-md-4">
+            <div class="step-image" routerLink="/projects/web-development">
+              <img src="/assets/images/projects/project7.png" alt="Case Study"/>
               <div class="text-hover">
-                  <h4>Event Management</h4>
+                  <h4>Website for startup</h4>
                   <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
               </div>
           </div>
+        </div>
+        <div class="col-md-4">
+          <div class="step-image" routerLink="/projects/child-care">
+            <img src="/assets/images/projects/project8.png" alt="Case Study"/>
+            <div class="text-hover">
+                <h4>Child Care</h4>
+                <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
+            </div>
+        </div>
       </div>
             </div>
       </div>
