--- a/src/app/components/projects/social-review/social-review.component.html
+++ b/src/app/components/projects/social-review/social-review.component.html
@@ -241,22 +241,22 @@
     <div class="other-works-body">
       <div class="row space">
         <div class="col-md-4">
-          <div class="step-image" routerLink="/projects/networking">
-              <img src="/assets/images/projects/project2.png" alt="Case Study"/>
-              <div class="text-hover">
-                  <h4>Network Scalability</h4>
-                  <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
-              </div>
-          </div>
-      </div>
-      <div class="col-md-4">
-        <div class="step-image" routerLink="/projects/skill-development">
-            <img src="/assets/images/projects/project3.png" alt="Case Study"/>
+          <div class="step-image" routerLink="/projects/health">
+            <img src="/assets/images/projects/project5.png" alt="Case Study"/>
             <div class="text-hover">
-                <h4>Skill Development</h4>
+                <h4>Healthy Buy</h4>
                 <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
             </div>
         </div>
+      </div>
+      <div class="col-md-4">
+        <div class="step-image" routerLink="/projects/construction">
+          <img src="/assets/images/projects/project6.png" alt="Case Study"/>
+          <div class="text-hover">
+              <h4>Construction Portal</h4>
+              <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
+          </div>
+      </div>
     </div>
     <div class="col-md-4">
       <div class="step-image" routerLink="/projects/web-development">
