--- a/src/app/components/projects/health-care/health-care.component.html
+++ b/src/app/components/projects/health-care/health-care.component.html
@@ -148,31 +148,31 @@
     <div class="other-works-body">
         <div class="row space">
             <div class="col-md-4">
-              <div class="step-image" routerLink="/projects/social-review">
-                  <img src="/assets/images/projects/project4.png" alt="Case Study"/>
-                  <div class="text-hover">
-                      <h4>Social Marketing</h4>
-                      <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-4">
-              <div class="step-image" routerLink="/projects/health">
-                  <img src="/assets/images/projects/project5.png" alt="Case Study"/>
-                  <div class="text-hover">
-                      <h4>Healthy Buy</h4>
-                      <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
-                  </div>
-              </div>
-          </div>
-          <div class="col-md-4">
-            <div class="step-image" routerLink="/projects/skill-development">
-                <img src="/assets/images/projects/project3.png" alt="Case Study"/>
+              <div class="step-image" routerLink="/projects/car-usability">
+                <img src="/assets/images/projects/project10.png" alt="Case Study"/>
                 <div class="text-hover">
-                    <h4>Skill Development</h4>
-                    <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
+                    <h4>Usability Testing</h4>
+                    <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
                 </div>
             </div>
+          </div>
+          <div class="col-md-4">
+            <div class="step-image" routerLink="/projects/event-management">
+              <img src="/assets/images/projects/project1.png" alt="Case Study"/>
+              <div class="text-hover">
+                  <h4>Event Management</h4>
+                  <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
+              </div>
+          </div>
+          </div>
+          <div class="col-md-4">
+            <div class="step-image" routerLink="/projects/networking">
+              <img src="/assets/images/projects/project2.png" alt="Case Study"/>
+              <div class="text-hover">
+                  <h4>Network Scalability</h4>
+                  <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
+              </div>
+          </div>
         </div>
         </div>
     </div>
