--- a/src/app/components/projects/marketing/marketing.component.html
+++ b/src/app/components/projects/marketing/marketing.component.html
@@ -221,29 +221,29 @@
         <div class="other-works-body">
             <div class="row space">
                 <div class="col-md-4">
-                  <div class="step-image" routerLink="/projects/social-review">
-                      <img src="/assets/images/projects/project4.png" alt="Case Study"/>
-                      <div class="text-hover">
-                          <h4>Social Marketing</h4>
-                          <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
-                      </div>
-                  </div>
+                    <div class="step-image" routerLink="/projects/child-care">
+                        <img src="/assets/images/projects/project8.png" alt="Case Study"/>
+                        <div class="text-hover">
+                            <h4>Child Care</h4>
+                            <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
+                        </div>
+                    </div>
               </div>
               <div class="col-md-4">
-                  <div class="step-image" routerLink="/projects/health">
-                      <img src="/assets/images/projects/project5.png" alt="Case Study"/>
-                      <div class="text-hover">
-                          <h4>Healthy Buy</h4>
-                          <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-md-4">
-                <div class="step-image" routerLink="/projects/skill-development">
-                    <img src="/assets/images/projects/project3.png" alt="Case Study"/>
+                <div class="step-image" routerLink="/projects/health-care">
+                    <img src="/assets/images/projects/project9.png" alt="Case Study"/>
                     <div class="text-hover">
-                        <h4>Skill Development</h4>
-                        <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
+                        <h4>Health Care Portal</h4>
+                        <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
+                    </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="step-image" routerLink="/projects/car-usability">
+                    <img src="/assets/images/projects/project10.png" alt="Case Study"/>
+                    <div class="text-hover">
+                        <h4>Usability Testing</h4>
+                        <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
                     </div>
                 </div>
             </div>
