--- a/src/app/components/projects/networking/networking.component.html
+++ b/src/app/components/projects/networking/networking.component.html
@@ -361,31 +361,31 @@
     <div class="other-works-body">
       <div class="row space">
         <div class="col-md-4">
-          <div class="step-image" routerLink="/projects/social-review">
-              <img src="/assets/images/projects/project4.png" alt="Case Study"/>
-              <div class="text-hover">
-                  <h4>Social Marketing</h4>
-                  <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
-              </div>
-          </div>
-      </div>
-      <div class="col-md-4">
-        <div class="step-image" routerLink="/projects/skill-development">
+          <div class="step-image" routerLink="/projects/skill-development">
             <img src="/assets/images/projects/project3.png" alt="Case Study"/>
             <div class="text-hover">
                 <h4>Skill Development</h4>
                 <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
             </div>
         </div>
-    </div>
-    <div class="col-md-4">
-      <div class="step-image" routerLink="/projects/event-management">
-          <img src="/assets/images/projects/project1.png" alt="Case Study"/>
+      </div>
+      <div class="col-md-4">
+        <div class="step-image" routerLink="/projects/social-review">
+          <img src="/assets/images/projects/project4.png" alt="Case Study"/>
           <div class="text-hover">
-              <h4>Event Management</h4>
+              <h4>Social Marketing</h4>
               <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
           </div>
       </div>
+    </div>
+    <div class="col-md-4">
+      <div class="step-image" routerLink="/projects/health">
+        <img src="/assets/images/projects/project5.png" alt="Case Study"/>
+        <div class="text-hover">
+            <h4>Healthy Buy</h4>
+            <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
+        </div>
+    </div>
   </div>
     </div>
     </div>
