--- a/src/app/components/projects/skill-development/skill-development.component.html
+++ b/src/app/components/projects/skill-development/skill-development.component.html
@@ -149,7 +149,7 @@
     <div class="row research2">
       <div class="col-md-6">
         <h3>User Research</h3>
-        <p>We have interviewed 100+ Personas</p>
+        <p>We have interviewed 100+ Users</p>
         <div class="row">
         <div class="col-md-6">
         <div class="step-image1">
@@ -158,7 +158,7 @@
     </div>
       <div class="col-md-6">
         <div class="set-list">
-      <div class="set"><img src="/assets/images/projects/event-management/Ellipse 560.png"/><span class="profile"><img src="/assets/images/projects/event-management/em5.png"/></span><span class="highlights">8</span><span class="highlights1">Career Seekers</span></div><hr>
+      <div class="set"><img src="/assets/images/projects/event-management/Ellipse 560.png"/><span class="profile"><img src="/assets/images/projects/event-management/em5.png"/></span><span class="highlights">50</span><span class="highlights1">Career Seekers</span></div><hr>
       <div class="set"><img src="/assets/images/projects/event-management/Ellipse 561.png"/><span class="profile"><img src="/assets/images/projects/event-management/em6.png"/></span><span class="highlights">8</span><span class="highlights1">Easy Goers</span></div><hr>
       <div class="set"><img src="/assets/images/projects/event-management/Ellipse 562.png"/><span class="profile"><img src="/assets/images/projects/event-management/em7.png"/></span><span class="highlights">9</span><span class="highlights1">The Upgraders</span></div>
     </div>
@@ -332,31 +332,31 @@
     <div class="other-works-body">
       <div class="row space">
         <div class="col-md-4">
-          <div class="step-image" routerLink="/projects/networking">
-              <img src="/assets/images/projects/project2.png" alt="Case Study"/>
-              <div class="text-hover">
-                  <h4>Network Scalability</h4>
-                  <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
-              </div>
-          </div>
-      </div>
-      <div class="col-md-4">
-        <div class="step-image" routerLink="/projects/skill-development">
-            <img src="/assets/images/projects/project3.png" alt="Case Study"/>
+          <div class="step-image" routerLink="/projects/social-review">
+            <img src="/assets/images/projects/project4.png" alt="Case Study"/>
             <div class="text-hover">
-                <h4>Skill Development</h4>
+                <h4>Social Marketing</h4>
                 <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
             </div>
         </div>
-    </div>
-    <div class="col-md-4">
-      <div class="step-image" routerLink="/projects/web-development">
-          <img src="/assets/images/projects/project7.png" alt="Case Study"/>
+      </div>
+      <div class="col-md-4">
+        <div class="step-image" routerLink="/projects/health">
+          <img src="/assets/images/projects/project5.png" alt="Case Study"/>
           <div class="text-hover">
-              <h4>Website for startup</h4>
+              <h4>Healthy Buy</h4>
               <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
           </div>
       </div>
+    </div>
+    <div class="col-md-4">
+      <div class="step-image" routerLink="/projects/construction">
+        <img src="/assets/images/projects/project6.png" alt="Case Study"/>
+        <div class="text-hover">
+            <h4>Construction Portal</h4>
+            <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
+        </div>
+    </div>
   </div>
     </div>
     </div>
