--- a/src/app/components/projects/web-development/web-development.component.html
+++ b/src/app/components/projects/web-development/web-development.component.html
@@ -88,7 +88,7 @@
                     </div>
                 </li><li>
                     <div class="step-image1">
-                        <img src="/assets/images/services/fdicon8.png" alt="" />
+                        <img src="/assets/images/services/spring-boot.png" alt="" />
                         <p>Spring Boot</p>
                     </div>
                 </li>
@@ -143,28 +143,28 @@
     <div class="other-works-body">
       <div class="row space">
         <div class="col-md-4">
-          <div class="step-image" routerLink="/projects/social-review">
-              <img src="/assets/images/projects/project4.png" alt="Case Study"/>
-              <div class="text-hover">
-                  <h4>Social Marketing</h4>
-                  <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
-              </div>
-          </div>
+          <div class="step-image" routerLink="/projects/event-management">
+            <img src="/assets/images/projects/project1.png" alt="Case Study"/>
+            <div class="text-hover">
+                <h4>Event Management</h4>
+                <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
+            </div>
+        </div>
       </div>
-      <div class="col-md-4">
-          <div class="step-image" routerLink="/projects/health">
-              <img src="/assets/images/projects/project5.png" alt="Case Study"/>
+        <div class="col-md-4">
+          <div class="step-image" routerLink="/projects/networking">
+            <img src="/assets/images/projects/project2.png" alt="Case Study"/>
+            <div class="text-hover">
+                <h4>Network Scalability</h4>
+                <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
+            </div>
+        </div>
+        </div>
+        <div class="col-md-4">
+          <div class="step-image" routerLink="/projects/skill-development">
+              <img src="/assets/images/projects/project3.png" alt="Case Study"/>
               <div class="text-hover">
-                  <h4>Healthy Buy</h4>
-                  <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
-              </div>
-          </div>
-      </div>
-      <div class="col-md-4">
-          <div class="step-image" routerLink="/projects/construction">
-              <img src="/assets/images/projects/project6.png" alt="Case Study"/>
-              <div class="text-hover">
-                  <h4>Construction Portal</h4>
+                  <h4>Skill Development</h4>
                   <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
               </div>
           </div>
