--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -50,29 +50,31 @@
       <div class="service-body">
         <div class="row">
           <div class="col-md-4">
-              <div class="service">
+              <div class="service" routerLink="/services/ux-consulting">
                 <div class="service-icon">
                     <img src="/assets/images/services/Group 2790.png" alt="UX Consulting"/>
                     <img src="/assets/images/services/Group 3368.png" alt="UX Consulting"/>
                 </div>
                 <h4>UX Consulting</h4>
                 <p>We believe research brings insights, our consultants connect with your business and end-users to build a better solutions to drive the business.</p>
-                <a routerLink="/services/ux-consulting" class="btn">Show More</a>
+                <a class="btn">Show More</a>
               </div>
           </div>
+          <hr>
           <div class="col-md-4">
-            <div class="service">
+            <div class="service" routerLink="/services/interface-design">
                 <div class="service-icon">
                   <img src="/assets/images/services/Group 2745.png" alt="UI Design"/>
                   <img src="/assets/images/services/Group 3370.png" alt="UI Design"/>
                 </div>
                 <h4>Interface Design</h4>
                 <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI.</p>
-                <a routerLink="/services/visual-design" class="btn">Show More</a>
+                <a class="btn">Show More</a>
             </div>
         </div>
+        <hr>
         <div class="col-md-4">
-          <div class="service">
+          <div class="service" routerLink="/services/front-end-dev">
             <div class="service-icon">
               <img src="/assets/images/services/Group 2746.png" alt="UI Development" />
               <img src="/assets/images/services/Group 3371.png" alt="UI Development" /> 
@@ -80,42 +82,45 @@
             <h4>UI Development</h4>
             <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
               execute it pixel perfect.</p>
-            <a routerLink="/services/front-end-dev" class="btn">Show More</a>
+            <a class="btn">Show More</a>
           </div>
         </div>
+        <hr>
         </div>
         <div class="row">
            <div class="col-md-4">
-                <div class="service">
+                <div class="service" routerLink="/services/back-end-dev">
                   <div class="service-icon">
                     <img src="/assets/images/services/Group 2750.png" alt="End-to-End Development"/>
                     <img src="/assets/images/services/Group 3372.png" alt="End-to-End Development"/>
                   </div>
                   <h4>End-to-End Development</h4>
                   <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL.</p>
-                  <a routerLink="/services/back-end-dev" class="btn">Show More</a>
+                  <a class="btn">Show More</a>
                 </div>
           </div>
+          <hr>
           <div class="col-md-4">
-            <div class="service">
+            <div class="service"  routerLink="/services/usability-testing">
               <div class="service-icon">
                 <img src="/assets/images/services/Group 2760.png" alt="Usablity Testing"/>
                 <img src="/assets/images/services/Group 3373.png" alt="Usablity Testing"/>
               </div>
               <h4>Usablity Testing</h4>
               <p>By means of Usability Testing techniques we evaluate the product or website’s user experience even before it is built or it hits the market to assess and iterate the design to reduce cost and enhance end user’s experience.</p>
-              <a routerLink="/services/usability-testing" class="btn">Show More</a>
+              <a class="btn">Show More</a>
             </div>
       </div>
+      <hr>
           <div class="col-md-4">
-              <div class="service">
+              <div class="service" href="https://uxmint.in/">
                 <div class="service-icon">
                   <img src="/assets/images/services/Group 2770.png" alt="Training"/>
                   <img src="/assets/images/services/Group 3369.png" alt="Training"/>
                 </div>
                 <h4>UX Training</h4>
                 <p>Transform your workforce with cheery picked courses making them business focused and future ready.</p>
-                <a href="http://uxmint.in" class="btn">Show More</a>
+                <a class="btn">Show More</a>
               </div>
           </div>
         </div>
