--- a/src/app/components/services/front-end-development/development.component.html
+++ b/src/app/components/services/front-end-development/development.component.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="col-md-6">
                     <picture>
-                    <div class="step-image head">
+                    <div class="step-image1 head">
                         <img src="/assets/images/services/fd4.png" alt="" />
                     </div>
                 </picture>
@@ -26,7 +26,7 @@
                         We strongly believe technology should aid a Product in scaling higher and not cripple the growth in any way. Based on the product vision and road map appropriate technology needs to be selected.</p>
                 </div>
                 <div class="col-md-6">
-                    <div class="step-image image">
+                    <div class="step-image2 image">
                         <img src="/assets/images/services/fd.svg" alt="" />
                     </div>
                 </div>
@@ -172,36 +172,36 @@
         <div class="service-body">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="service">
+                    <div class="service" routerLink="/services/ux-consulting">
                       <div class="service-icon">
                           <img src="/assets/images/services/Group 2790.png" alt="UX consulting"/>
                           <img src="/assets/images/services/Group 3368.png" alt="UX consulting"/>
                       </div>
                       <h4>UX Consulting</h4>
                       <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
-                      <a routerLink="/services/ux-consulting" class="btn">Show More</a>
+                      <a class="btn">Show More</a>
                     </div>
                   </div>
                   <div class="col-md-4">
-                    <div class="service">
+                    <div class="service" routerLink="/services/interface-design">
                       <div class="service-icon">
-                        <img src="/assets/images/services/Group 2745.png" alt="Visual Design"/>
-                        <img src="/assets/images/services/Group 3370.png" alt="Visual Design"/>
+                        <img src="/assets/images/services/Group 2745.png" alt="Interface Design"/>
+                        <img src="/assets/images/services/Group 3370.png" alt="Interface Design"/>
                       </div>
-                      <h4>Visual Design</h4>
+                      <h4>Interface Design</h4>
                       <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
-                      <a routerLink="/services/visual-design" class="btn">Show More</a>
+                      <a class="btn">Show More</a>
                   </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="service">
+                    <div class="service" routerLink="/services/front-end-dev">
                         <div class="service-icon">
                           <img src="/assets/images/services/Group 2750.png" alt="End-to-End Development"/>
                           <img src="/assets/images/services/Group 3372.png" alt="End-to-End Development"/>
                         </div>
                         <h4>Back End Development</h4>
                         <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
-                        <a routerLink="/services/front-end-dev" class="btn">Show More</a>
+                        <a class="btn">Show More</a>
                       </div>
                 </div>
             </div>
