--- a/src/app/components/services/back-end-development/back-end-development.component.html
+++ b/src/app/components/services/back-end-development/back-end-development.component.html
@@ -12,7 +12,7 @@
               </div>
               <div class="col-md-1"></div>
               <div class="col-md-5">
-                  <div class="step-image head">
+                  <div class="step-image1 head">
                       <img src="/assets/images/services/bd.png" alt="" />
                   </div>
               </div>
@@ -25,7 +25,7 @@
                 </p>
               </div>
               <div class="col-md-6">
-                <div class="step-image">
+                <div class="step-image2">
                   <img src="/assets/images/services/bd1.svg" alt="" />
               </div>
               </div>
@@ -143,36 +143,36 @@
       <div class="service-body">
           <div class="row">
             <div class="col-md-4">
-              <div class="service">
+              <div class="service" routerLink="/services/front-end-dev">
                   <div class="service-icon">
                     <img src="/assets/images/services/Group 2760.png" alt="Usablity Testing"/>
                     <img src="/assets/images/services/Group 3373.png" alt="Usablity Testing"/>
                   </div>
                   <h4>Usablity Testing</h4>
                   <p>By means of Usability Testing techniques we valuate the product or website’s user experience even before it is built or it hits the market to assess and iterate the design to reduce cost and enhance end user’s experience</p>
-                  <a routerLink="/services/front-end-dev" class="btn">Show More</a>
+                  <a class="btn">Show More</a>
                 </div>
           </div>
           <div class="col-md-4">
-              <div class="service">
+              <div class="service" href="https://uxmint.in/">
                   <div class="service-icon">
                     <img src="/assets/images/services/Group 2770.png" alt="Training"/>
                     <img src="/assets/images/services/Group 3369.png" alt="Training"/>
                   </div>
                   <h4>Training</h4>
                   <p>Transform your workforce with cheery picked courses making them business focused and future ready</p>
-                  <a href="http://uxmint.in" class="btn">Show More</a>
+                  <a class="btn">Show More</a>
                 </div>
           </div>
               <div class="col-md-4">
-                <div class="service">
+                <div class="service" routerLink="/services/ux-consulting">
                   <div class="service-icon">
                       <img src="/assets/images/services/Group 2790.png" alt="UX consulting"/>
                       <img src="/assets/images/services/Group 3368.png" alt="UX consulting"/>
                   </div>
                   <h4>UX Consulting</h4>
                   <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
-                  <a routerLink="/services/ux-consulting" class="btn">Show More</a>
+                  <a class="btn">Show More</a>
                 </div>
               </div>
           </div>
