--- a/src/app/components/services/back-end-development/back-end-development.component.scss
+++ b/src/app/components/services/back-end-development/back-end-development.component.scss
@@ -22,11 +22,14 @@ p{
         margin-top: 37px;
     }
      background-color: rgb(255, 255, 255); 
-    margin-top: 100px;
-    .head img{
-        margin-top: -100px;
-        width: 645px;
-        height: 660px;
+    margin-top: 50px;
+    .step-image1 img{
+        width: 100%;
+        height: 500px;
+    }
+    .step-image2 img{
+        width: 100%;
+        height: auto;
     }
     img{
         margin-bottom: 5px;
@@ -140,12 +143,14 @@ p{
         h3{
             font-size: 13px;
         }
-    .head img{
-        margin-top: 10px;
-        width: 100%;
-        height: auto;
-        margin-left: 0px;
-    }
+        .step-image1 img{
+            width: 100%;
+            height: auto;
+            margin-top: 50px;
+        }
+        .step-image2 img{
+            margin-top: 30px;
+        }
     .spacing{
         margin-top: 50px;
     }
@@ -162,5 +167,8 @@ p{
         margin-top: 20px;
         font-size: 35px;
     }
+}
+.step-image img{
+margin-top: 30px;
 }
 }
