--- a/src/app/components/services/usability-testing/usability-testing.component.html
+++ b/src/app/components/services/usability-testing/usability-testing.component.html
@@ -108,29 +108,29 @@
       <div class="service-body">
           <div class="row">
               <div class="col-md-4">
-                <div class="service">
+                <div class="service" routerLink="/services/ux-consulting">
                   <div class="service-icon">
                       <img src="/assets/images/services/Group 2790.png" alt="UX consulting"/>
                       <img src="/assets/images/services/Group 3368.png" alt="UX consulting"/>
                   </div>
                   <h4>UX Consulting</h4>
                   <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
-                  <a routerLink="/services/ux-consulting" class="btn">Show More</a>
+                  <a class="btn">Show More</a>
                 </div>
               </div>
               <div class="col-md-4">
-                <div class="service">
+                <div class="service" routerLink="/services/interface-design">
                   <div class="service-icon">
-                    <img src="/assets/images/services/Group 2745.png" alt="Visual Design"/>
-                    <img src="/assets/images/services/Group 3370.png" alt="Visual Design"/>
+                    <img src="/assets/images/services/Group 2745.png" alt="Interface Design"/>
+                    <img src="/assets/images/services/Group 3370.png" alt="Interface Design"/>
                   </div>
-                  <h4>Visual Design</h4>
+                  <h4>Interface Design</h4>
                   <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
-                  <a routerLink="/services/visual-design" class="btn">Show More</a>
+                  <a class="btn">Show More</a>
               </div>
             </div>
             <div class="col-md-4">
-              <div class="service">
+              <div class="service" routerLink="/services/front-end-dev">
                   <div class="service-icon">
                     <img src="/assets/images/services/Group 2746.png" alt="Front End Dev" />
                     <img src="/assets/images/services/Group 3371.png" alt="Front End Dev" /> 
@@ -138,7 +138,7 @@
                   <h4>Front End Development</h4>
                   <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
                     execute it pixel perfect</p>
-                  <a routerLink="/services/front-end-dev" class="btn">Show More</a>
+                  <a class="btn">Show More</a>
                 </div>
           </div>
           </div>
