--- a/src/app/components/services/ux-consulting/ux-consulting.component.html
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.html
@@ -185,36 +185,36 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="service">
-                        <div class="service-icon">
+                        <div class="service-icon" routerLink="/services/front-end-dev">
                           <img src="/assets/images/services/Group 2746.png" alt="Front End Dev" />
                           <img src="/assets/images/services/Group 3371.png" alt="Front End Dev" /> 
                         </div>
                         <h4>Front End Development</h4>
                         <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
                           execute it pixel perfect</p>
-                        <a routerLink="/services/front-end-dev" class="btn">Show More</a>
+                        <a class="btn">Show More</a>
                       </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="service">
+                    <div class="service" routerLink="/services/back-end-dev">
                         <div class="service-icon">
                           <img src="/assets/images/services/Group 2750.png" alt="End-to-End Development"/>
                           <img src="/assets/images/services/Group 3372.png" alt="End-to-End Development"/>
                         </div>
                         <h4>Back End Development</h4>
                         <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
-                        <a routerLink="/services/back-end-dev" class="btn">Show More</a>
+                        <a class="btn">Show More</a>
                       </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="service">
+                    <div class="service" routerLink="/services/interface-design">
                       <div class="service-icon">
-                        <img src="/assets/images/services/Group 2745.png" alt="Visual Design"/>
-                        <img src="/assets/images/services/Group 3370.png" alt="Visual Design"/>
+                        <img src="/assets/images/services/Group 2745.png" alt="Interface Design"/>
+                        <img src="/assets/images/services/Group 3370.png" alt="Interface Design"/>
                       </div>
-                      <h4>Visual Design</h4>
+                      <h4>Interface Design</h4>
                       <p>Aesthetically good design can instil curiosity for the customers to move beyond the landing page. Make your website come alive with best UI</p>
-                      <a routerLink="/services/visual-design" class="btn">Show More</a>
+                      <a class="btn">Show More</a>
                   </div>
                 </div>
             </div>
