--- a/src/app/components/services/ux-consulting/ux-consulting.component.scss
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.scss
@@ -29,9 +29,11 @@ h3{
     font-weight: 100;
     margin-bottom: 20px;
 }
-.head{
-    width:780px;
-    height:618px;
+.step-image{
+    img{
+    width: 200%;
+    height: auto;
+    }
 }
 .list1{
     margin-left: 33px;
@@ -124,10 +126,12 @@ h3{
         font-weight: 100;
         margin-bottom: 20px;
     }
-    .head{
+    .step-image{
+        img{
         width: 100%;
         height: auto;
-        margin-left: 0px;
+        margin-top: 50px;
+        }
     }
     .list1{
         margin-left: 33px;
@@ -160,7 +164,7 @@ h3{
             padding-top: 10px;
             img{
                 margin-bottom: 5px;
-                width: 4%;
+                width: 9%;
             }   
          }
          .row{
