--- a/src/app/components/services/visual-design/visual-design.component.html
+++ b/src/app/components/services/visual-design/visual-design.component.html
@@ -424,19 +424,19 @@
         <div class="service-body">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="service">
+                    <div class="service" routerLink="/services/ux-consulting">
                       <div class="service-icon">
                           <img src="/assets/images/services/Group 2790.png" alt="UX consulting"/>
                           <img src="/assets/images/services/Group 3368.png" alt="UX consulting"/>
                       </div>
                       <h4>UX Consulting</h4>
                       <p>We believe research brings insights our team of design experts connect with your business and ‘dev team to build a better product</p>
-                      <a routerLink="/services/ux-consulting" class="btn">Show More</a>
+                      <a class="btn">Show More</a>
                     </div>
                   </div>
 
                 <div class="col-md-4">
-                    <div class="service">
+                    <div class="service" routerLink="/services/front-end-dev">
                         <div class="service-icon">
                           <img src="/assets/images/services/Group 2746.png" alt="Front End Dev" />
                           <img src="/assets/images/services/Group 3371.png" alt="Front End Dev" /> 
@@ -444,19 +444,19 @@
                         <h4>Front End Development</h4>
                         <p>We specialise in HTML/CSS JavaScript, Angular and back-end integration. We can liaise with the back-end team to
                           execute it pixel perfect</p>
-                        <a routerLink="/services/front-end-dev" class="btn">Show More</a>
+                        <a class="btn">Show More</a>
                       </div>
                 </div>
 
                 <div class="col-md-4">
-                    <div class="service">
+                    <div class="service" routerLink="/services/back-end-dev">
                         <div class="service-icon">
                           <img src="/assets/images/services/Group 2750.png" alt="End-to-End Development"/>
                           <img src="/assets/images/services/Group 3372.png" alt="End-to-End Development"/>
                         </div>
                         <h4>Back End Development</h4>
                         <p>We build products which are innovative scalable & modular to solve critical business problems. We use Java Spring, REST API, PHP, MongoDB, MySQL</p>
-                        <a routerLink="/services/back-end-dev" class="btn">Show More</a>
+                        <a class="btn">Show More</a>
                       </div>
                 </div>
               
