--- a/src/app/components/enquiry-footer/enquiry-footer.component.html
+++ b/src/app/components/enquiry-footer/enquiry-footer.component.html
@@ -7,6 +7,15 @@
         <div class="row">
         <h5>Lets connect and build a </h5><h2>better Product </h2>
       </div>
+      </div>
+      <div class="col-sm-2">
+          <a class="btn btn-primary enquire" routerLink="/contact-us">Enquire</a>
+      </div>
+      <div class="col-sm-1"></div>
+    </div>
+    <div class="row">
+      <div class="col-sm-1"></div>
+      <div class="col-sm-10">
         <div class="contact">
           <div class="row">
             <div class="col-sm-4"><img src="/assets/images/about-us/Group 2708.png"> <span class="contacts"><a href="tel:+91 9940410072">+91 9940410072</a></span></div>
@@ -15,10 +24,6 @@
             <div class="col-sm-1"></div>
            </div>
           </div>
-      </div>
-      
-      <div class="col-sm-2">
-          <a class="btn btn-primary enquire" routerLink="/contact-us">Enquire</a>
       </div>
       <div class="col-sm-1"></div>
     </div>
