--- a/src/app/components/enquiry-footer/enquiry-footer.component.scss
+++ b/src/app/components/enquiry-footer/enquiry-footer.component.scss
@@ -10,7 +10,7 @@
         font-size: 30px;
         font-weight: 500;
         text-align: left;
-        margin-left: 40px;
+        margin-left: 10px;
         margin-bottom: 20px;
         margin-top: 6px;
     }
@@ -26,6 +26,7 @@
     }
     .contact{
         padding-bottom: 100px;
+        text-align: left;
         .col-sm-4{
             padding-left: 0;
             padding-right: 0;
@@ -56,31 +57,38 @@
 
 @include media-breakpoint-down(md) {
     .footer{
+        padding-left: 10px;
+        padding-right: 10px;
         h5{
             font-size: 20px;
             font-weight: 500;
             text-align: left;
             margin-left: 10px;
             margin-bottom: 10px;
-            padding-left: 20px;
+            padding-left: 0px;
+            margin-top: 4px;
         }
         h2{
             font-size: 25px;
             font-weight: 300;
             text-align: left;
-            margin-left: 19px;
-            padding-left: 10px;
+            margin-left: 10px;
             margin-bottom: 20px;
         }
         .enquiry{
-            padding-top: 20px;
+            padding-top: 50px;
+            padding-bottom: 50px;
         }
         .contact{
             padding-bottom: 20px;
             text-align: left;
             .col-sm-4{
-                padding-left: 15px;
-                padding-right: 15px;
+                padding-left: 0px;
+                padding-right: 0px;
+            }
+            .col-sm-3{
+                padding-left: 0px;
+                padding-right: 0px;
             }
         }
         img{
@@ -91,9 +99,9 @@
         .contacts{
             font-size: 13px;
         }
-        .col-sm-2{
-            margin-left: 10px;
-        }
+        // .col-sm-2{
+        //     margin-left: 10px;
+        // }
         .btn.enquire {
             font-size: 13px;
         }
